Wed Mar 31 09:45:13 UTC 2010  Martin Corino <mcorino@remedy.nl>

        * DAnCE/NodeManager/Node_Manager.cpp:
        * DAnCE/NodeManager/NodeManager.mpc:
          Added CIAO logger initialization to be able to see logging
          from reused CIAO components (like Server activator).

Wed Mar 31 09:38:13 UTC 2010  Martin Corino <mcorino@remedy.nl>

        * DAnCE/TargetManager/TargetManager.mpc:
          Fix for link error in static build.

Wed Mar 31 07:51:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/performance-tests/LatencyTT/Sender/LatencyTT_Test_Sender_exec.cpp:
          Fixed incorrect types with qsort

Tue Mar 30 19:26:54 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/IDL3_Plus/KitchenSink.idl:

          Uncommented multiple forward declared eventtype case,
          problem has been fixed.

Tue Mar 30 10:31:13 UTC 2010  Martin Corino <mcorino@remedy.nl>

        * tools/Completion/CompletionHandler_T.h:
          Fix compile warnings concerning non-virtual destructor.

Tue Mar 30 09:24:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/performance-tests/Latency/*
          Removed, LatencyTT will be removed to Latency, that is the ping
          pong latency test with two topics

        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl_T.cpp:
          Catch some exceptions by const

        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor_exec.cpp:
          Print statuskind

        * connectors/ami4ccm/examples/Hello/descriptors/run_test.pl:
          Reduced sleep time

Tue Mar 30 09:14:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/performance-tests/LatencyTT/Receiver/LatencyTT_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/performance-tests/LatencyTT/Receiver/LatencyTT_Test_Receiver_exec.h:
        * connectors/dds4ccm/performance-tests/LatencyTT/Sender/LatencyTT_Test_Sender_exec.cpp: