@@ -1,3 +1,10 @@
+Wed Mar 31 13:37:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Receiver/Latency_Receiver.cpp:
+        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/Latency_Sender.cpp:
+        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/NDDS_Latency_Sender.cpp:
+          Use take instead of take_next_sample
+
 Wed Mar 31 09:45:13 UTC 2010  Martin Corino <mcorino@remedy.nl>
 
         * DAnCE/NodeManager/Node_Manager.cpp:
